既存テストを修正しました。